--- a/0-intro.tex
+++ b/0-intro.tex
@@ -6,9 +6,12 @@
 
 \todo{Gas separation of xenon/krypton}
 
-
+Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., ^{85}Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
+dioxide, noble gases, hydrogen, methane, or nitrous oxide. The xenon/krypton separation is usually performed on atmospheric gases,\autocite{kerry2007industrial} but other more abundant sources of noble gases can be found especially in the nuclear industry.\autocite{Banerjee_2014} 
 
 \todo{Nanoporous materials}
+
+In the current state of 
 
 \todo{Database/screening}
 
