--- a/4-ml.tex
+++ b/4-ml.tex
@@ -6,7 +6,7 @@
 \chapter{Statistical Learning of Adsorption Properties}
 \vspace*{-1\baselineskip}
 
-\section{Machine Learning Models}
+\section{Machine learning models}
 
 Machine learning (ML) models have been widely used in the field of nanoporous material study to characterize adsorption, transport, catalytic or mechanical properties, just to cite a few. It can in some cases replace very time-consuming simulations with simpler calculation of key descriptors that can help the model predict the desired properties. In other cases, it is used to describe the structure--property relationships learned by the ML model. However, machine learning is not a silver bullet, we cannot blindly apply it on any applications; it requires a thorough work on understanding the key variables that will improve the prediction. By using our work on thermodynamic descriptors and our knowledge on the effect of pressure on the selectivity developed in the previous chapters, I will build a machine learning model to characterize the separation of xenon from krypton at ambient pressure.
 
@@ -286,9 +286,9 @@ The learning rate $\eta$ used to update the ensemble model is also a key compone
 
 I also used three other parameters that are very close to the ones implemented in a random forest to add randomness in the gradient descent procedure. Augmented by these techniques, the model can now be called stochastic gradient boosting as described in the Ref.~\cite{Friedman2002}. At each iteration, a subsample of the training data is drawn at random (without replacement) according to a parameter $N\e{sample}/N$. This parameter has a similar effect as the bagging procedure of the random forest, it narrows the attention of each weak learner on a portion of the learning set, which reduces overfitting like in a cross-validation procedure. The different trees learn from different parts of the training set, which means that the ensemble model can never overfit on the whole dataset. This provides a handy solution to the infamous overfitting problem of standard gradient boosting. Another procedure concerns the random selection of the feature columns. This idea was developed in the Ref.~\cite{Tin_Kam_Ho_1998} and randomly extracts a subsample of the features for training of one tree; a parameter needs to be chosen in order to determine the size of the portion of features $p\e{tree}/p$ used to train each tree. A similar idea is to make the column sampling at each level instead of each tree, and a proportion $p\e{level}/p$ can be defined like this. Similarly, we can make a feature selection at the node level but this parameter was not used. 
 
-Finally, I compiled all the parameters used in the construction of the final model in the table~\ref{tab:hyperparameter}. This table contains a tree-specific parameter "max\_depth", but also an ensemble specific one "n\_estimators", in addition to very general regularization parameters inspired by linear models "alpha" and "lambda", as well as more gradient boosting specific parameter "learning\_rate" and more randomness-based hyperparameters inspired by random forest such as "subsample", "colsample\_bytree" and "colsample\_bylevel". This model can be considered as a mixing pot of a variety of ideas coming from all corners of the data science field. Using this machine learning model, I will try to solve the selectivity drop problem that puzzled us in the previous chapter.
+Finally, I compiled all the parameters used in the construction of the final model in Table~\ref{tab:hyperparameter}. This table contains a tree-specific parameter "max\_depth", but also an ensemble specific one "n\_estimators", in addition to very general regularization parameters inspired by linear models "alpha" and "lambda", as well as more gradient boosting specific parameter "learning\_rate" and more randomness-based hyperparameters inspired by random forest such as "subsample", "colsample\_bytree" and "colsample\_bylevel". This model can be considered as a mixing pot of a variety of ideas coming from all corners of the data science field. Using this machine learning model, I will try to solve the selectivity drop problem that puzzled us in the previous chapter.
 
-\section{Prediction of the Ambient-pressure Selectivity}
+\section{Prediction of the ambient-pressure selectivity}
 
 Before diving deep into the model of our work, I will quickly review the different literature contributions to xenon/krypton separation screenings. Simon et al.\ published one of the first articles on an ML-assisted screening approach for the separation of a Xe/Kr mixture extracted from the atmosphere.\autocite{Simon_2015} Their model's performance was highly relying on the Voronoi energy, which is basically an average of the interaction energies of a xenon atom at each Voronoi node.\autocite{Rycroft_2009} To rationalize this increase in performance, we can consider this Voronoi energy as a faster proxy for the adsorption enthalpy. By comparing it to the standard Widom insertion, I found that although it is faster, it is less accurate; and I developed a more effective alternative, the surface sampling (RAESS) using symmetry and non-accessible volumes blocking (see section~\ref{sct:RAESS}). Recently, Shi et al.\ used an energy grid to generate energy histograms as a descriptor for their ML model, which gives an exhaustive description of the infinitely diluted adsorption energies,\autocite{Shi_2023} but can be computationally expensive.
 
@@ -321,7 +321,7 @@ The geometric analysis of the crystalline porous materials is typically based on
 
 The SA exposed to different probe sizes (\SI{1.2}{\angstrom}, \SI{1.8}{\angstrom} and \SI{2.0}{\angstrom}) were tested. The probe occupiable volume was chosen to measure the void fraction (VF) for different adsorbent by using probe sizes of \SI{1.8}{\angstrom} (close to the radius of krypton) and \SI{2.0}{\angstrom} (close to that of xenon). This definition of the pore volume was found to be in better agreement with experimental nitrogen isotherms.\autocite{vol_Ongari2017}
 
-Because our goal is to predict the difference between the low-pressure selectivity and the ambient-pressure one (for a given gas mixture composition), some of these descriptors have very little importance, and the key factor is the difference of accessible volume and the affinity of the remaining pore volume with xenon, compared to krypton. The intuition developed in chapter 2 sketched the role of a diverse distribution of pores with different xenon affinities. For all these reasons, from all the ``standard'' descriptors taken from the literature, I kept only the following 7 descriptors: C\%, N\%, O\%, LCD ("D\_i\_vdw\_uff298"), PLD ("D\_f\_vdw\_uff298"), SA for a \SI{1.2}{\angstrom} probe ("ASA\_m2/cm3\_1.2") and VF for a \SI{2.0}{\angstrom} probe ("PO\_VF\_2.0"). I also built a new descriptor $\Delta \text{VF}$ void fraction values, the difference of volumes occupiable by xenon (\SI{2.0}{\angstrom}) and by krypton (\SI{1.8}{\angstrom}). All these descriptors along with other pore size distribution based geometrical descriptors are presented in detail in the Table~S1 of the Supplementary Information (SI).
+Because our goal is to predict the difference between the low-pressure selectivity and the ambient-pressure one (for a given gas mixture composition), some of these descriptors have very little importance, and the key factor is the difference of accessible volume and the affinity of the remaining pore volume with xenon, compared to krypton. The intuition developed in chapter 2 sketched the role of a diverse distribution of pores with different xenon affinities. For all these reasons, from all the ``standard'' descriptors taken from the literature, I kept only the following 7 descriptors: C\%, N\%, O\%, LCD ("D\_i\_vdw\_uff298"), PLD ("D\_f\_vdw\_uff298"), SA for a \SI{1.2}{\angstrom} probe ("ASA\_m2/cm3\_1.2") and VF for a \SI{2.0}{\angstrom} probe ("PO\_VF\_2.0"). I also built a new descriptor $\Delta \text{VF}$ void fraction values, the difference of volumes occupiable by xenon (\SI{2.0}{\angstrom}) and by krypton (\SI{1.8}{\angstrom}). All these descriptors along with other pore size distribution based geometrical descriptors are presented in detail in Table~S1 of the Supplementary Information (SI).
 
 \subsubsection{Pore size statistics}
 
@@ -349,7 +349,7 @@ To better quantify the change of selectivity, it could be interesting to give st
 
 %% 900K gaps
 As explained in the previous chapter, Boltzmann averaging at higher temperature gave better result in describing the ambient-pressure selectivity description. 
-This new type of descriptor is very interesting since it better performs around the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (see Figure~\ref{fgr:H_900K}). I used this descriptor to build several descriptors presented in the Table~\ref{tab:energy_descriptors}. As shown on Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case are the second and third most influential descriptors of our ML model. They are complementary to the exchange Gibbs free energy at \SI{298}{\kelvin} to predict the selectivity at higher pressures.
+This new type of descriptor is very interesting since it better performs around the high selectivity region, where the standard Boltzmann average at \SI{298}{\kelvin} loses its accuracy (see Figure~\ref{fgr:H_900K}). I used this descriptor to build several descriptors presented in Table~\ref{tab:energy_descriptors}. As shown on Figure~\ref{fgr:featimp_shap}, the exchange Gibbs free energy at \SI{900}{\kelvin} and the excess of free energy compared to the \SI{298}{\kelvin} case are the second and third most influential descriptors of our ML model. They are complementary to the exchange Gibbs free energy at \SI{298}{\kelvin} to predict the selectivity at higher pressures.
 
 %% conclusion
 By combining the above-mentioned features with more standard geometrical descriptors, I trained an ML model for the ambient pressure selectivity that identifies the origins of the selectivity drop and gives promising prediction results.
@@ -535,7 +535,7 @@ This method can later be used in a screening procedure that relies on cheap desc
   \caption{An illustration of the screening procedure that could be used to find highly selective materials.}\label{fgr:pipeline}
 \end{figure}
 
-\section{Opening the Black Box}
+\section{Opening the black box}
 
 %% SHAP intro
 To better understand the intuition behind this selectivity drop, I used the SHAP\autocite{SHAP,molnar2020interpretable} library of interpretation models to draw relationships between the descriptors and the predicted ambient-pressure selectivity. This code library is based on the calculation of Shapley values\autocite{shapley1953value} that measure the contribution of each descriptor to the prediction to locally interpret our ML model. This interpretation model untangles the interdependence between the descriptors to extract an individual contribution. To go beyond the local interpretation, we can rapidly compute the Shapley values for the whole dataset using faster algorithms;\autocite{SHAP} scatter plots of the contribution as a function of the descriptor values called SHAP dependence plots can then be drawn to make a more global interpretation of our ML model. Knowing a descriptor value, I then infer, with a certain level of uncertainty, how it changes the final predicted value, which highlights unknown structure--property relationships. Finally, I use the mean absolute Shapley values of each feature on the training set to measure the feature importance (see Figure~\ref{fgr:featimp_shap}).
@@ -598,7 +598,7 @@ The entropic term is, however, way more complex to interpret and opens unexplore
       \includegraphics[width=\textwidth]{figures/4-ml/main/BIMDIL_clean.pdf}
       \caption{BIMDIL: true $\Delta\e{exc} G_1=-9.20$}
     \end{subfigure}
-  \caption{Main contributions of the descriptors on the selectivity prediction of two archetypal examples. The descriptor labels used are detailed in the Table~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}.}\label{fgr:contribution}
+  \caption{Main contributions of the descriptors on the selectivity prediction of two archetypal examples. The descriptor labels used are detailed in Table~\ref{tab:geom_descriptors} and~\ref{tab:energy_descriptors}.}\label{fgr:contribution}
 \end{figure}
 
 The second structure BIMDIL is also among the most selective with a selectivity at low pressure of $41.0$, while maintaining it to $41.2$ at ambient pressure. The model manages to predict this stability of the selectivity by giving a value of $40.0$. Consequently, the first contribution of "G\_0" is among the most negative ones and set a baseline of $-2.4$ for the upcoming contributions. The contributions of "G\_900K" and "G\_900K" are not the highest possible but they continue to lower down the value of the predicted selectivity. It is the joint contributions of the other descriptors that will really discriminate between the two structures and decide why this one will keep its selectivity. Unlike the previously analyzed structure, this one has a "delta\_pore" value below \SI{0.3}{\angstrom}, which explains the negative Shapley value it has for our prediction. The contribution of "delta\_G0\_298\_900" that was only a little negative for the other one, is now playing a major role since it is right within the range of between $4$ and \SI{6}{\kilo\joule\per\mole} (see Figure~\ref{fgr:contribution}). We can also verify that "pore\_dist\_std" is now below the threshold instead of being above for the other structure. We can confirm that the other contributions are also following the rules implied by the SHAP dependence plots, no apparent anomalies are detected, and the joint efforts of all the descriptors tend to give a lower free energy value, which leads to the conservation of the selectivity value at higher pressure. The set of descriptor values is clearly very different from the previous structure, many values are in opposite contribution domains, which explains how the model manages to disentangle the highly selective structures to find out the ones that would keep their selectivity at higher pressure.
