--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -16,7 +16,7 @@ In separation processes, diffusion can either be the main performance metric or 
     \label{fgr:intro_diffusion}
 \end{figure}
 
-\section{Modeling the Diffusion Process}
+\section{Modeling the diffusion process}
 
 % From the macroscopic brownian motion modeled by the
 % Fick's law
@@ -363,7 +363,7 @@ And even as an experimental material, the diffusion properties of xenon and kryp
 It is possible to explain this exceptional by a special mechanism that happens in the tridimensional channel network of ADOGEH. As shown on Figure~\ref{fgr:ADOGEH}, for both xenon and krypton all dimensions are available for diffusion through the channels in the three cardinal directions. However, when we look at the sort of ``pocket'' (not a blocking pocket in the MD simulation) that connects the channels diagonally, the access to it is clearly not the same if we compare the two 3D energy grid plots. For xenon, on Figure~\ref{fgr:ADOGEH_Xe}, the connection is way thinner than for krypton, on Figure~\ref{fgr:ADOGEH_Kr}, for the same energy threshold. This can be interpreted as a higher energy barrier for xenon than for krypton to access this ``pocket''. But, why would this explain the unusual difference in diffusion coefficients for xenon and krypton? This can be explained by the fact that the directions in which a krypton can diffuse is therefore much higher, which means that it has a higher probability of turning around than xenon. To say it more explicitely, a xenon can diffuse in the 3D space by taking only 3 main directions, but a krypton would lose time deviating from the cardinal directions --- the same way as opening-up dimensions decreases the diffusion coefficient ($\langle{r(t)}^2\rangle=2d\tau$). Moreover, when a krypton takes the small channel toward the ``pocket'', it would have a non negligible residence time inside, which further slows it down compared to a xenon. These ``pockets'' can be seen as traps for krypton, if it were a race between both adsorbate inside the nanoporous material. 
 
 
-Beyond the particular cases of OQESAF and ADOGEH, other nanoporous materials have lower diffusion selectivity values. For instance, all the other materials of the Table~\ref{table:diff} have a diffusion selectivity between $0.2$ and $1.4$. Depending on the shape and the size distribution of the porous channels, we would have higher or lower values of diffusion selectivity and xenon diffusion coefficient values. For instance, as shown on Figure~\ref{fgr:porediff_b}, there seems to be a weak correlation between a pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and the diffusion performance for structures with a LCD\ex{UFF} value lower than \SI{6}{\angstrom} --- for these structures, pore size have a higher chance to influence the transport properties. This correlation is logically due to the fact that if this difference between LCD and PLD is high, the diffusing xenon will have to cross a higher energy barrier to move inside the channels, therefore decreasing the diffusion coefficient. If we consider, all structures available, the correlation disappears because in the materials with a higher LCD value the movement of the diffusing xenon is not influenced as much by the pore walls. And actually for values of LCD higher than \SI{7}{\angstrom}, the diffusion coefficient is rather stabilized around $10^{-5}$~\si{\square\cm\per\s} as shown on Figure~\ref{fgr:diff_H_lcd}. 
+Beyond the particular cases of OQESAF and ADOGEH, other nanoporous materials have lower diffusion selectivity values. For instance, all the other materials of Table~\ref{table:diff} have a diffusion selectivity between $0.2$ and $1.4$. Depending on the shape and the size distribution of the porous channels, we would have higher or lower values of diffusion selectivity and xenon diffusion coefficient values. For instance, as shown on Figure~\ref{fgr:porediff_b}, there seems to be a weak correlation between a pore size characteristics (LCD\ex{UFF}$-$PLD\ex{UFF}) and the diffusion performance for structures with a LCD\ex{UFF} value lower than \SI{6}{\angstrom} --- for these structures, pore size have a higher chance to influence the transport properties. This correlation is logically due to the fact that if this difference between LCD and PLD is high, the diffusing xenon will have to cross a higher energy barrier to move inside the channels, therefore decreasing the diffusion coefficient. If we consider, all structures available, the correlation disappears because in the materials with a higher LCD value the movement of the diffusing xenon is not influenced as much by the pore walls. And actually for values of LCD higher than \SI{7}{\angstrom}, the diffusion coefficient is rather stabilized around $10^{-5}$~\si{\square\cm\per\s} as shown on Figure~\ref{fgr:diff_H_lcd}. 
 
 For structures with a high ambient-pressure selectivity (Figure~\ref{fgr:porediff_c}), we can now see a negative linear relation between this LCD-PLD difference and the xenon/krypton diffusion selectivity. This is actually due to the fact that highly selective materials have pore size close to the size of a xenon as shown in details in the previous chapters. The effect on Xe diffusion coefficient can in fact be enlarged to the Xe/Kr diffusion seelectivity as previously suggested by the noisy but stable values of Kr diffusion coefficients around $3\times10^{-5}$~\si{\square\cm\per\s} (see Figure~\ref{fgr:diff_s0_lcd}). The weakness of the correlation can be explained by the uncertainty inherent to the MD methodology for diffusion coefficient calculation (evaluated to around {20\%} for the material KAXQIL), but also by phenomena that I did not cover with the simple arithmetic difference of two pore characteristics. For instance the tortuosity of the channel, which is very tricky to evaluate in a tridimensional space can surely add some insight to the comprehension of the diffusion coefficeint values. For instance, I will show different channel shape in the different examples below that can be qualitatively discussed but no effort to quantify these effects have been done in my current work.
 
@@ -389,9 +389,9 @@ For structures with a high ambient-pressure selectivity (Figure~\ref{fgr:poredif
      \caption{ Scatterplots of the diffusion coefficient compared to the LCD-PLD difference labeled using the channel dimension for all structures (a) and for structures with an LCD above \SI{5.5}{\angstrom} (b). On the subfigure (c), the scatterplot of the xenon/krypton diffusion selectivity compared to the LCD-PLD difference for the most selective structures ($s\ex{Xe/Kr}_1>30$). }\label{fgr:porediff}
 \end{figure}
 
-The highly selective materials shown in the Figure~\ref{fgr:porediff_c} are actually shown on the Table~\ref{table:diff}. The negative linear relation between the LCD-PLD difference and the Xe/Kr diffusion selectivity or the Xe diffusion coefficient can be reconfirmed by looking at the values of the Table for materials with 1D channels (ADOGEH excepted). I am now going to split them into two categories in order to take a glimpse on the tortuosity difference between these materials.  
+The highly selective materials shown in the Figure~\ref{fgr:porediff_c} are actually shown in Table~\ref{table:diff}. The negative linear relation between the LCD-PLD difference and the Xe/Kr diffusion selectivity or the Xe diffusion coefficient can be reconfirmed by looking at the values of Table for materials with 1D channels (ADOGEH excepted). I am now going to split them into two categories in order to take a glimpse on the tortuosity difference between these materials.  
 
-We can first take a look at materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line, as shown on Figure~\ref{fgr:tube_cavities}. These channels are actually forming straight lines, and if evaluated, their tortuosity would actually be very low. For TONBII, we actually have very small LCD-PLD difference, which explains the rather high diffusion selectivity near $1$. There are almost no difference between xenon and krypton diffusing in the channels of this material. When the value of LCD increases, for a very similar value of PLD, the diffusion selectivity of such materials drops for BAEDTA01 and XUNSOQ as shown on the Table~\ref{table:diff}. This drop can be explained by a now lower value of the xenon diffusion coefficient. 
+We can first take a look at materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels following a straight line, as shown on Figure~\ref{fgr:tube_cavities}. These channels are actually forming straight lines, and if evaluated, their tortuosity would actually be very low. For TONBII, we actually have very small LCD-PLD difference, which explains the rather high diffusion selectivity near $1$. There are almost no difference between xenon and krypton diffusing in the channels of this material. When the value of LCD increases, for a very similar value of PLD, the diffusion selectivity of such materials drops for BAEDTA01 and XUNSOQ as shown in Table~\ref{table:diff}. This drop can be explained by a now lower value of the xenon diffusion coefficient. 
 
 \begin{figure}[ht]
   \centering
@@ -584,7 +584,7 @@ Diffusion coefficients are extremely time-consuming to calculate and with a lot 
   \caption{ Features used in the ML model for diffusion coefficient prediction. }\label{Table:feat_diff}
 \end{table}
 
-To train the ML model, I used {80\%} of the 4,873 structures that survived all the different imposed filters. And I used 12 different descriptors described in the Table\ref{Table:feat_diff} to train this model. The hyperparameters of the XGBoost model was determined using a similar approach as in the chapter 4, and the following were used:
+To train the ML model, I used {80\%} of the 4,873 structures that survived all the different imposed filters. And I used 12 different descriptors described in Table\ref{Table:feat_diff} to train this model. The hyperparameters of the XGBoost model was determined using a similar approach as in the chapter 4, and the following were used:
 
 \begin{lstlisting}[language=Python]
   optimal_params = {
@@ -623,7 +623,7 @@ To check if this model has enough training data, or that it needs more training 
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.6\textwidth]{figures/5-diffusion/Diff_Feature_importance_shapbased.pdf}
-  \caption{ Feature importance determined using the average of the absolute shapley values on every training data for each feature. An influential feature would have a very high average absolute shap value. The features are detailed in the Table~\ref{Table:feat_diff}. }\label{fgr:feat_imp_diff}
+  \caption{ Feature importance determined using the average of the absolute shapley values on every training data for each feature. An influential feature would have a very high average absolute shap value. The features are detailed in Table~\ref{Table:feat_diff}. }\label{fgr:feat_imp_diff}
 \end{figure}
 
 Finally, I used the SHAP algorithms already presented in the previous chapter to interpret the ML model. Unsurprisingly, the most important features are the PLD and the barrier activation energy as already shown in the previous section. The void fraction seems to play a non negligible role also.
