--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -6,7 +6,7 @@
 \chapter{Toward the next generation of screenings}
 \vspace*{-1\baselineskip}
 
-\section{Limits of the Current Screening Methodologies}
+\section{Limits of the current screening methodologies}
 
 As presented in our review of the different screening methodologies in the chapter 1, it is very common to screen for one particular metric whether it is the selectivity or the permselectivity or the capacity depending on the targeted application. Attempts of screening that searches for the most selective materials but combined with a good capacity are more and more common.\autocite{Chung_2019,Zhang_2022,Solanki_2020} If we take the problem of the selectivity screening, many improvements can be made in terms of calculation efficiency, or in terms of correctness of the molecular description. In the previous chapters, I mostly focused on the gain in efficiency by exploring many adsorption energy sampling techniques and by comparing their computational time  and their accuracy. But I also started to incorporate other properties to the screening procedure by exploring the transport properties for instance. And improve even more the efficiency, I explored alternative calculation strategies besides the more standard ones. 
 
@@ -14,7 +14,7 @@ To overcome the shortcomings of the current adsorption screening methodologies, 
 
 In this final chapter, I want to discuss three main research focuses: (i) the calculation of transport properties that could be further optimized, (ii) the adsorption calculations in flexible frameworks, and (iii) the better description of the polarization in the energy calculations.
 
-\section{Future Developments on Transport Properties}
+\section{Future developments on transport properties}
 
 Transport properties were thoroughly studied using MD simulations and an ML model mainly based on the PLD and a proxy of the diffusion activation energy. This approach gives very promising results since it speeds up considerably the evaluation of diffusion coefficient values. However, the generalizability to other types of system is not guaranteed when using an ML-based approach. To create a simulation that would be faster than MD simulations and more accurate than the MD-based approach, we will finish the development of the diffusion coefficient calculation code based on the transition state theory and on kinetic Monte Carlo simulations. As explained in the previous chapter, we are at the last step of the development. When developed, this new approach can give diffusion coefficient that could be fed into a breakthrough modelization tool in order to compare to experimental data. In this section, I will also talk about the perspectives opened up by the new RUPTURA software in terms of experiment-theory comparison.
 
@@ -53,7 +53,7 @@ A breakthrough curve can be broken down into three different zones: an unsaturat
 
 On the example of SBMOF-1, we can see that there is only a visible mass transfer zone for \ce{CO2}. It suggests that there is a diffusion limitation for this adsorbate in the SBMOF-1 material. However, we do not see any diffusion limitation for xenon as previously suggested by the diffusion coefficient calculated by an MD simulation ($3\times 10^{-8}$\si{\square\cm\per\s}). In the next chapter, we will propose an explanation for this discrepancy between the experimental and simulated values.
 
-\section{Screening flexible materials}
+\section{Screening of flexible materials}
 
 The reason why people usually prefer rigid frameworks is the high complexity brought by the simulation of the dynamics of a flexible framework. We already saw the cost of simulating a grand canonical ensemble using MC methods and developed strategies to avoid these types of calculations. The simulation of a flexible framework would require to relax the volume and simulate an osmotic ensemble ($\mu$,$P$,$T$), which requires MC moves on the volume of the unit cell itself.\autocite{Bousquet2012} This type of MC simulation describes more accurately every aspect of the flexibility be it the intrinsic flexibility due to thermal agitation or the adsorbate-induced flexibility. However, in a screening procedure, this type of simulation can be prohibitively long, it should, however, be used as an accurate method to confirm the properties of a few top materials. 
 
@@ -118,7 +118,7 @@ This approach does not give a complete picture of the flexibility effect on the 
 
 According to original paper on SBMOF-1,\autocite{Banerjee_2016} the theoretical selectivity calculated by UFF is around $70.6$. However, the experimental selectivity is much lower, around $16$. To solve this mystery, Witman et al. used a snapshot-based method to evaluate the effect of selectivity. The intrinsic flexibility lowers the selectivity, which goes in the right direction to explain the difference of selectivity, but it does not seem to capture the whole picture. 
 
-I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on the Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
+I think that the missing effect that could explain the discrepancies observed is the deformation induced by the loading of adsorbate inside the material. For instance, experimentally a structure is never empty when we resolve it by X-ray, and molecules are actually loaded inside. As shown on Table~\ref{table:sbmof}, the structure that was originally published for its good \ce{CO2}/\ce{N2} selectivity\autocite{Yeh2012,Banerjee2012} was also tested for water adsorption, and two different structures emerged from this study: KAXQOR and KAXQIL. The first one is loaded by either air or \ce{CO2}, and the structure does not seem to be stretched as much (low LCD values around \SI{4.5}{\angstrom}). The second one, on the other hand, is loaded by water that forms big clusters inside the pores and therefore stretches the pore size toward higher values (high LCD values around \SI{5.0}{\angstrom}). If we look at the structures resolved in the Nature Communications study\autocite{Banerjee_2016}, depending on the adsorbate (hexane, water, butane, krypton or xenon), the LCD and PLD values change in the first order according to the size of the adsorbate as illustrated on Figure~\ref{fgr:stretch}. There are, of course, other effects, like the clustering we mentioned for water, but also less expected effects such as the orientation of the adsorbate inside the structure. 
 
 \begin{table}[t]
 \centering
@@ -162,7 +162,7 @@ As shown on Figure~\ref{fgr:ads_config}, the orientation of the hexane molecule 
     \includegraphics[height=0.6\textwidth]{figures/6-perspectives/QUXRUY.jpg}
     \caption{QUXRUY}\label{fgr:QUXRUY}
   \end{subfigure}
-  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In QUXRIM (a), the carbon atoms are oriented toward the S atoms, whereas in QUXRUY (b) they are oriented toward the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on the Table~\ref{table:sbmof}. Color code: brown for C, white for H, red for O, cyan for Ca, yellow for S. The structure visualizations are generated using the VESTA software.\autocite{VESTA}}\label{fgr:ads_config}
+  \caption{ An illustration of the effect of the orientation of hexane inside a SBMOF-1-like material. In QUXRIM (a), the carbon atoms are oriented toward the S atoms, whereas in QUXRUY (b) they are oriented toward the Ca atoms. This difference in the orientation could explain the different structural properties of the materials reported on Table~\ref{table:sbmof}. Color code: brown for C, white for H, red for O, cyan for Ca, yellow for S. The structure visualizations are generated using the VESTA software.\autocite{VESTA}}\label{fgr:ads_config}
 \end{figure}
 
 Now that I characterized the adsorbate effect on a few example configurations, we can better understand the thought process that leads to the identification of KAXQIL as a candidate for Xe/Kr separation. The KAXQIL structure is actually representing the material loaded by water with large pores which enables a good interaction with a large molecule like xenon. For this reason, it was identified as a top selective material. However, when it was experimentally tested for low-pressure adsorption using the Henry constant, it is most likely that the pores are not stretched, which implies lower Henry constants than expected. The structures UQEFAZ or KAXQOR seem to a better description of this low-pressure case since the experimental selectivity values are much more consistent with their theoretical selectivity values. 
@@ -186,7 +186,7 @@ Now that we identified two completely different diffusion behaviors, we can extr
 
 By using simple simulation methods (Widom insertion and MD) on rigid structures, I probed the effects of flexibility on both the adsorption and transport properties using experimentally resolved structures in different adsorption conditions. This study sheds light on the mystery around the experiment-theory discrepancies and opens up opportunities to understand similar problematic systems. In this study, I relied on the experimental data that was published on the SBMOF structure, the same resources are not always available for other systems and maybe an effort of data generation using either experiments or simulations should be performed in these cases. If generalized, this approach can even be automatically applied on a series of structures, opening up the possibility of ``flexibility-aware'' screenings in the future. Aware of the importance of both flexibility and transport effects, other studies have tried to incorporate both in a small-scale screening process.\autocite{Stanton_2022} The authors used a flexible forcefield MD simulations to determine the diffusion coefficient and DFT calculations at the adsorption site to assess the adsorption performance. The main issue of this method is its computational cost, but it can be an alternative solution to the one introduced here, when no prior knowledge is available on the structure’s flexibility. 
 
-\section{Noble Gas Polarizability}
+\section{Noble gas polarizability}
 
 The last but not the least effect that could influence greatly the adsorption performances is, the level of theory behind the interaction energy modelization. In most screening studies, we use (me included) very low-level classical theories to describe the guest--host interactions, because of the low computational cost associated to it. To improve the description, some studies focus on a few specific structures and use higher levels of theory such as DFT calculations. However, the prohibitive computational cost of these methods makes it hard to deploy it in high-throughput screenings. 
 
