--- a/remerciements.tex
+++ b/remerciements.tex
@@ -16,10 +16,24 @@
 \begingroup
 \itshape
 
-En premier lieu, je voudrais adresser ici mes plus vifs remerciements 
+Je souhaiterais tout d'abord adresser mes remerciements aux rapportrices de cette thèse, Sofia Calero et Magali Benoit pour le temps qu'elles ont accordés à cette thèse. \todo{Jury}
+\todo{Examinateur}
 
+\todo{Philippe Guilbaud}
 
-Lionel Zoubritzky pour les discussions algorithmiques très florissantes.
+\todo{Isabelle Hablot}
+
+\todo{François-Xavier Coudert}
+
+Ces années n'auront pas été si riches sans la présence des membres de l'équipe:
+
+\todo{PSL}
+
+\todo{Lionel, algo}
+
+\todo{Dabeen, relecture}
+
+\todo{gestionnaire CEA IRCP}
 
 \endgroup
 
