--- a/1-screening.tex
+++ b/1-screening.tex
@@ -6,11 +6,9 @@
 \chapter{High-throughput Computational Screening of Nanoporous Materials}
 \vspace*{-1\baselineskip}
 
-\section{Nanoporous Materials}
+\section{Nanoporous materials}
 
-Before exploring the screening methodologies of screening, the first section aims to introduce key
-concepts related to the system of interest, specifically nanoporous materials. These concepts will
-be referred consistently throughout the text, as the structural characteristics of these materials
+Before exploring the screening methodologies of screening, the first section aims to introduce key concepts related to the system of interest, specifically nanoporous materials. These concepts will be referred consistently throughout the text, as the structural characteristics of these materials
 are intricately linked to their performance in targeted applications.
 
 \subsection{The main characteristics of nanoporous materials}
@@ -111,7 +109,7 @@ Yet, simply increasing the size of the databases is not sufficient. It is essent
 \subsection{Exploring the chemical and structural space}
 
 
-With the development of ever-increasing nanoporous material databases, computational chemists have proposed increasingly innovative methods for evaluating and screening thousands of structures. However, new challenges have emerged, including the need to design more efficient screening methods that surpass the brute force screening and effectively analyze big data. Two research groups in Northwestern University, led by R. Snurr and J. Hupp, began to address these challenges by using a ``funnel-like'' approach to efficiently screen approximately 130,000 hypothetical MOF structures.\autocite{Wilmer_2012} To achieve this, they performed a first screening that involved fewer steps of simulation on the entire dataset. They then extracted a subset of top-performing structures to subject them to a second round of simulations, which involved more steps. This procedure was repeated until a few materials were selected through a final round of simulations with reasonable accuracy. Similar ``funnel-like'' procedures have then been adopted in other fields of applications as described in the Figure~\ref{fgr:screening}. This screening method optimizes computation time by striking a balance between the complexity of calculations and the amount of data to be screened. It ensures that only the most demanding simulations or experiments are applied to the few most promising structures. While this method efficiently identifies top candidates, it has limitations in drawing quantitative structure-property relationships (QSPR) and faces scalability issues beyond a critical dataset size.
+With the development of ever-increasing nanoporous material databases, computational chemists have proposed increasingly innovative methods for evaluating and screening thousands of structures. However, new challenges have emerged, including the need to design more efficient screening methods that surpass the brute force screening and effectively analyze big data. Two research groups in Northwestern University, led by R. Snurr and J. Hupp, began to address these challenges by using a ``funnel-like'' approach to efficiently screen approximately 130,000 hypothetical MOF structures.\autocite{Wilmer_2012} To achieve this, they performed a first screening that involved fewer steps of simulation on the entire dataset. They then extracted a subset of top-performing structures to subject them to a second round of simulations, which involved more steps. This procedure was repeated until a few materials were selected through a final round of simulations with reasonable accuracy. Similar ``funnel-like'' procedures have then been adopted in other fields of applications as described on Figure~\ref{fgr:screening}. This screening method optimizes computation time by striking a balance between the complexity of calculations and the amount of data to be screened. It ensures that only the most demanding simulations or experiments are applied to the few most promising structures. While this method efficiently identifies top candidates, it has limitations in drawing quantitative structure-property relationships (QSPR) and faces scalability issues beyond a critical dataset size.
 
 To overcome these new challenges, researchers are increasingly turning to transferable models trained by a machine learning (ML) algorithm on diverse and size-limited subsamples. Ideally, such models are transferable to potentially millions of structures and can provide valuable QSPR. For instance, Fernandez et al.\autocite{Fernandez_2013} used multiple linear regression analysis, decision tree regression, and nonlinear support-vector machine models to extract QSPR and establish design principles for high-performing MOFs in methane storage applications, while also identifying promising structures. In their initial work, they only used geometrical descriptors to describe methane storage\autocite{Fernandez_2013}. However, realizing the importance of chemical descriptors, they proposed the atomic property weighted radial distribution function as a powerful descriptor to predict \ce{CO2} uptakes.\autocite{Fernandez_2013_rdf} More importantly, they proved that ML can be used as a pre-screening tool to avoid running time-costly simulations by accurately identifying around \SI{95}{\percent} of the top 1000 best-performing materials. Recently, the same group used similar techniques to predict \ce{CO2} working capacity as well as \ce{CO2}/\ce{H2} selectivity in MOFs for pre-combustion carbon capture.\autocite{Dureckova_2019}
 
@@ -122,7 +120,7 @@ To overcome these new challenges, researchers are increasingly turning to transf
 \end{figure*}
 
 
-\section{Review of Screening Methodologies}
+\section{Review of screening methodologies}
 
 Now that the main concepts around nanoporous materials and their computational representations have been covered, we can introduce the methods used to extract meaningful information from this data. These methods enable us to screen, i.e. evaluate systematically all the structures from a database. Given the scaling issue of such an enterprise, it is essential to employ speed-up strategies in these screenings. 
 
@@ -150,7 +148,7 @@ By screening these descriptors, the authors identified three promising structure
   \caption{Analysis of a diverse set of experimentally derived metal--organic frameworks (MOFs) with accessible metal sites for the oxidative activation of methane. The graph shows the predicted barrier for the C--H bond activation of methane, E$_\text{a}$, as a function of the metal-oxo formation energy, $\Delta E_\text{O}$. For each material, the symbol color refers to the group number of the metal in the periodic table. The best-fit line has been plotted in black, and has a mean absolute error (MAE) of \SI{0.09}{\eV}. MOFs with E$_\text{a}<$ \SI{1}{\eV} are classified as being reactive towards C--H bond activation and MOFs with $\Delta E_\text{O}<0$ as having thermodynamically favored active sites when using \ce{O2} as the reference state. Reprinted with permission from Ref.~\cite{Rosen_2019}. Copyright \copyright\  2019 American Chemical Society.}\label{fgr:Rosen_2019}
 \end{figure}
 
-Later, Rosen et al.\ enlarged the scope of materials screened to other metals.\autocite{Rosen_2019} From an 838 DFT-optimized MOFs subset of CoRE MOF 2014, the authors selected 168 MOFs that were likely to have open metal sites and pore-limiting diameters enabling reactant diffusion. They then used a fully automated workflow to place the reactants in the adsorption site and performed periodic DFT calculations to relax the system. As shown in Figure~\ref{fgr:Rosen_2019}, they used the bond activation energy E$_\text{a,C--H}$ and the metal-oxo formation energy $\Delta E_\text{O}$ as key parameters to classify materials according to their relative stability and reactivity and find the best materials for the application. These energies were then analyzed using physicochemical descriptors such as spin density on oxygen and metal--oxygen distance.
+Later, Rosen et al.\ enlarged the scope of materials screened to other metals.\autocite{Rosen_2019} From an 838 DFT-optimized MOFs subset of CoRE MOF 2014, the authors selected 168 MOFs that were likely to have open metal sites and pore-limiting diameters enabling reactant diffusion. They then used a fully automated workflow to place the reactants in the adsorption site and performed periodic DFT calculations to relax the system. As shown on Figure~\ref{fgr:Rosen_2019}, they used the bond activation energy E$_\text{a,C--H}$ and the metal-oxo formation energy $\Delta E_\text{O}$ as key parameters to classify materials according to their relative stability and reactivity and find the best materials for the application. These energies were then analyzed using physicochemical descriptors such as spin density on oxygen and metal--oxygen distance.
 
 As this brute force screening approach can quickly become cumbersome, researchers in the field are striving to find essential structure-activity relationships to accelerate future computational screenings.
 Several descriptors have been developed for high-throughput screenings. For instance, Butler et al.\ used electron removal energies to explain photocatalytic behaviors of MOFs,\autocite{Butler_2014} while Rosen et al.\ showed that the energy required to form the metal oxide intermediate was a major descriptor of the thermal catalysis of alkane oxidation by \ce{N2O}.\autocite{Rosen_HTPDFT_2019} Fumanal et al.\ presented a screening protocol based on two energy-based descriptors to predict the photocatalytic properties of MOFs.\autocite{Fumanal_descriptor_2020} {Rosen et al.\ recently conducted screenings of thousands of MOF structures to compare different DFT functionals and leveraged the calculated data to train machine learning models capable of rapidly predicting MOF band gaps.\autocite{Rosen_2022_high} } 
@@ -163,7 +161,7 @@ In the past decade, there has been a growing interest in the systematic study of
 
 A notable early study that investigated systematically the elastic properties of a specific material family was conducted in 2013 on all-silica zeolites,\autocite{Coudert_2013} i.e., crystalline and porous Si\ce{O2} polymorphs. While this study focused on only 121 zeolitic frameworks out of the 244 known structures, it demonstrated that systematic studies at the DFT level were computationally tractable and provided physical insights into the link between microscopic structure and macroscopic physical properties. This study also showed, among other things, that a few zeolites presented large negative linear compressibility (NLC), which could be linked to the wine-rack motif of their frameworks.
 
-Beyond the specific case of zeolites, other groups have applied DFT calculations to determine elastic constants in a high-throughput manner. For example, de Jong et al.\ leveraged the structures of the Materials Project\autocite{Matgenome, Jain_2013} to chart the diversity of elastic properties across the whole space of inorganic crystalline compounds.\autocite{deJong_2015} As shown in the Figure~\ref{fgr:deJong2015}, they provided a database containing the full elastic information of 1,181 inorganic compounds initially. Since then, the database has grown steadily and currently encompasses nearly 14,000 records.\autocite{MaterialsProject} This dataset has been used in two different ways by researchers in the field.
+Beyond the specific case of zeolites, other groups have applied DFT calculations to determine elastic constants in a high-throughput manner. For example, de Jong et al.\ leveraged the structures of the Materials Project\autocite{Matgenome, Jain_2013} to chart the diversity of elastic properties across the whole space of inorganic crystalline compounds.\autocite{deJong_2015} As shown on Figure~\ref{fgr:deJong2015}, they provided a database containing the full elastic information of 1,181 inorganic compounds initially. Since then, the database has grown steadily and currently encompasses nearly 14,000 records.\autocite{MaterialsProject} This dataset has been used in two different ways by researchers in the field.
 
 Firstly, researchers have employed tensorial analysis to quantitatively investigate the occurrence of certain ``anomalous'' or rare mechanical behavior within the database of elastic properties. These behaviors include negative linear compressibility, very high anisotropy, or negative Poisson's ratio (also called \emph{auxeticity}). Indeed, such properties are considered rare and usually sought after --- the materials exhibiting these anomalous behaviors are mechanical metamaterials.\autocite{Coudert_2019} In addition to their fundamental significance, such materials find applications in materials engineering areas, such as energy dissipation (as shock absorbers and for bulletproofing), energy storage, as well as acoustics.\autocite{Surjadi_2018} However, quantifying exactly ``how rare'' these behaviors have been challenging until now. Chibani et al.\ performed a systematic exploration of available mechanical properties of crystalline materials and demonstrated that the general mechanical trends, which hold for isotropic (noncrystalline) materials at the macroscopic scale, also apply, on average, to crystals. Moreover, they could quantify the presence of materials with rare anomalous mechanical properties: {3\%} of the crystals exhibited negative linear compressibility, and only {0.3\%} displayed complete auxeticity (negative Poisson's ratio in all directions of space).
 
@@ -194,7 +192,7 @@ State-of-the-art MD simulations could calculate rather accurate diffusion coeffi
 
 Another approach replaces MD simulations with more computationally efficient TS-based methods to determine diffusion coefficients.
 Haldoupis et al.\ developed an algorithm to identify diffusion paths by exploiting an energy grid with a clustering algorithm. The diffusion paths are then analyzed to identify the pores and the channels, and to calculate key geometric (the PLD or the largest cavity diameter) and energetic (Henry's constant, diffusion activation energy) features.\autocite{Haldoupis_2010}
-As illustrated in Figure~\ref{fgr:Haldoupis_2010}, they found a clear dependence of the diffusion energy barrier to the PLD. As one of the first TS-based screenings, it is still subject to many development perspectives. For instance, the approach is limited to spherical adsorbates and rigid frameworks. Moreover, the diffusion coefficients are approximated using a simplistic hopping model for a qualitative analysis. This method is highly efficient, but the accumulation of approximations makes a quantitative systematic analysis of diffusion coefficients out of reach.
+As illustrated on Figure~\ref{fgr:Haldoupis_2010}, they found a clear dependence of the diffusion energy barrier to the PLD. As one of the first TS-based screenings, it is still subject to many development perspectives. For instance, the approach is limited to spherical adsorbates and rigid frameworks. Moreover, the diffusion coefficients are approximated using a simplistic hopping model for a qualitative analysis. This method is highly efficient, but the accumulation of approximations makes a quantitative systematic analysis of diffusion coefficients out of reach.
 
 \begin{figure}[ht]
 \centering
@@ -212,11 +210,11 @@ Very recently a massively parallel GPU-accelerated string method has been implem
 In separation application, the study of the transport properties can evaluate the feasibility of the thermodynamic equilibrium, crucial for any bed separation process. If this separation is not feasible, kinetic separation or partial molecular sieving are to be considered. Some notable examples are air separation in zeolites using pressure swing adsorption,\autocite{ruthven1990air} \ce{N2}/\ce{O2} separation in carbon molecular sieves,\autocite{Reid_1999} or \ce{N2} removal from natural gas.\autocite{Wang_2019} In kinetic separation, the valuable metric is not the selectivity anymore, but the permselectivity, i.e.\ the product of the selectivity and the permeability (ratio of diffusion coefficients). Therefore, the screening of diffusion coefficients gives complementary information to the thermodynamic selectivity screenings. Here, we give some examples of such screening and the main descriptors that partially explain the computed figures of merit.
 
 To give an overview on the potential of computational screenings to predict transport properties, we are now going to focus on the membrane separation applied to natural gas upgrading. The separation of \ce{CH4} from \ce{N2} and \ce{CO2} is a crucial step of this upgrading process.
-In 2016, a large-scale high-throughput screening (see Figure~\ref{fgr:screening} for the approach) of hypothetical MOF membranes for upgrading natural gas has been performed using MD simulations.\autocite{Qiao_2016} Qiao et al.\ confirmed the existence of MOF materials beyond the upper bound for \ce{N2}/\ce{CH4} and \ce{CO2}/\ce{CH4} separations determined by Robeson on a large set of polymeric membranes.\autocite{robeson1991correlation} This Robeson's upper bound is systematically crossed by MOF materials in computational screenings, see as an example the Figure~\ref{fgr:Altintas_2018}. This can be explained by the fact that MOFs perform better than polymeric frameworks and the simulations at this level of theory. They also identified 24 MOFs suitable for the ternary \ce{CO2}/\ce{N2}/\ce{CH4} separation using a multistage screening described in the previous section.
+In 2016, a large-scale high-throughput screening (see Figure~\ref{fgr:screening} for the approach) of hypothetical MOF membranes for upgrading natural gas has been performed using MD simulations.\autocite{Qiao_2016} Qiao et al.\ confirmed the existence of MOF materials beyond the upper bound for \ce{N2}/\ce{CH4} and \ce{CO2}/\ce{CH4} separations determined by Robeson on a large set of polymeric membranes.\autocite{robeson1991correlation} This Robeson's upper bound is systematically crossed by MOF materials in computational screenings, see as an example Figure~\ref{fgr:Altintas_2018}. This can be explained by the fact that MOFs perform better than polymeric frameworks and the simulations at this level of theory. They also identified 24 MOFs suitable for the ternary \ce{CO2}/\ce{N2}/\ce{CH4} separation using a multistage screening described in the previous section.
 
 Two years later, Qiao et al.\ used the same approach to study this ternary separation on a database of synthesized structures.\autocite{Qiao_2018} Applying machine learning techniques to their data, they performed a QSPR analysis. Using a principal component analysis, they notably found that the permeability is higher when materials have high PLD and void fraction coupled with low density and percentage of pores within a characteristic range. The opposite was found to be true for high membrane selectivity for the \ce{CO2}/\ce{CH4} separation. Using decision tree algorithms, they gave objective procedures of selecting the best separation membranes based on some key descriptors. Finally, they studied in detail some top performing materials found by a support vector machine algorithm.
 
-Altintas and Keskin later performed a screening on the same database for \ce{CO2}/\ce{CH4} membrane separation to identify the best performing materials and perform more computationally demanding simulations.\autocite{Altintas_2018} {The simulations in rigid structures at infinite dilution show numerous structures above the Robeson's upper bound as shown in the Figure~\ref{fgr:Altintas_2018}, this crossing of the upper-bound can be explained by either a better performance of MOF membranes compared to the polymeric membranes used by Robeson, or an overestimation due to oversimplified assumptions (infinite dilution, rigidity). But when higher pressures and flexibility are considered, the selectivity values are dropping down closer to the upper boundary}, hence confirming the overestimation of the performance in screenings {based on rigid approximations at infinite dilution}. \revrem{But the best performing materials are still above the Robeson's upper bound and can therefore be used in mixed matrix membranes with polymeric membranes.} Budhathoki et al.\ developed a screening methodology for MOFs in mixed matrix membranes for carbon capture applications by estimating permeation values in these composite materials using a Maxwell model.\autocite{Budhathoki_2019} The authors even proposed a pricing for each material compared to their relative performance. Similar studies have been carried out on different materials, Yan et al.\ showed the influence of decorating COFs with different chemical compounds on the membrane selectivity.\autocite{Yan_2018}
+Altintas and Keskin later performed a screening on the same database for \ce{CO2}/\ce{CH4} membrane separation to identify the best performing materials and perform more computationally demanding simulations.\autocite{Altintas_2018} {The simulations in rigid structures at infinite dilution show numerous structures above the Robeson's upper bound as shown on Figure~\ref{fgr:Altintas_2018}, this crossing of the upper-bound can be explained by either a better performance of MOF membranes compared to the polymeric membranes used by Robeson, or an overestimation due to oversimplified assumptions (infinite dilution, rigidity). But when higher pressures and flexibility are considered, the selectivity values are dropping down closer to the upper boundary}, hence confirming the overestimation of the performance in screenings {based on rigid approximations at infinite dilution}. \revrem{But the best performing materials are still above the Robeson's upper bound and can therefore be used in mixed matrix membranes with polymeric membranes.} Budhathoki et al.\ developed a screening methodology for MOFs in mixed matrix membranes for carbon capture applications by estimating permeation values in these composite materials using a Maxwell model.\autocite{Budhathoki_2019} The authors even proposed a pricing for each material compared to their relative performance. Similar studies have been carried out on different materials, Yan et al.\ showed the influence of decorating COFs with different chemical compounds on the membrane selectivity.\autocite{Yan_2018}
 
 \begin{figure}[ht]
 \centering
@@ -293,7 +291,7 @@ In 2019, Chung et al.\ screened the most extensive simulation-ready and experime
 After this quick overview of the different screening studies in the field of xenon/krypton separation, we are now going to detail its industrial context, the foreseen top materials that could fulfill the industrial separation and the further studies needed to better understand the process while discovering new materials.
 
 
-\section{Separation of Xenon from Krypton}
+\section{Separation of xenon from krypton}
 
 In this section, I will show how the above-mentioned screening methodologies can help us understand the origins of the Xe/Kr separation and identify promising materials for industrial applications. 
 
@@ -314,8 +312,7 @@ The industrial interest for noble gases lies first in the many applications atta
   Molten salt reactor\autocite{engel1971xenon,Riley_2019} &  unknown \\[0.5mm]
   \hline
 \end{tabular}
-\caption{Composition of the Xe/Kr mixture coming from different industrial sources of production. The Xe/Kr composition can change over time depending on the radioactive decay of Xe and Kr isotopes. The composition out of a molten salt reactor is unknow (no industrial installation exists) and depend on the fissile element, if it is a majority of \ex{235}U, then the composition would be very close to the one indicated by the Ref.~\cite{Blades_1956}. }
-\label{tab:indus_app}
+\caption{Composition of the Xe/Kr mixture coming from different industrial sources of production. The Xe/Kr composition can change over time depending on the radioactive decay of Xe and Kr isotopes. The composition out of a molten salt reactor is unknow (no industrial installation exists) and depend on the fissile element, if it is a majority of \ex{235}U, then the composition would be very close to the one indicated by the Ref.~\cite{Blades_1956}. }\label{tab:indus_app}
 \end{table}
 
 The role of a dispatchable source of low-carbon energy can only be fulfilled by batteries charged by renewable energies (wind or solar) or by nuclear plants. However, one of the major criticisms of this source of energy concerns the management of the radioactive waste. As promising technologies in gas separation emerge, there is an increasing need for a solution for the release of very small amount of radioactive off-gases like Kr\e{85} from nuclear spent fuels.\autocite{Blomeke_1969} Furthermore, stable xenon isotopes are also produced in these spent nuclear fuels, which can be used in all the above-mentioned applications. In the context of a regained interest in nuclear energy, the fourth generation nuclear plants are projected to be built on other technologies such as the light water or the molten salt technologies.\autocite{LeBlanc_2010} Molten salt reactors would continuously produce xenon and radioactive krypton in the electricity generation process.\autocite{Riley_2019} The development of gas separation units in these facilities would represent a promising source for xenon production. Yet, we can laboriously imagine deploying standard cryogenic distillation units in a nuclear facility for obvious security reasons. Consequently, nanoporous materials are considered as the alternative technology for xenon/krypton separation. Zeolites are already used as a pre-purification system,\autocite{kerry2007industrial} and they are now projected to be used as a standalone separation system. 
@@ -343,7 +340,7 @@ To connect back this work to computational screenings, I am now going to present
 
 It is possibly the largest-scale study performed in this area, both by the sheer number of frameworks involved and by the diversity of their nature. Because such a set is too big for brute-force screening with GCMC simulations, they proposed a multiscale modeling strategy combining machine learning algorithms (trained on a diverse subset of 15,000 materials) with molecular simulations (used both to generate the ML training data, and to refine the separation properties for the top performers obtained by the ML predictor). Without going into details (see Fig.~\ref{fgr:Simon} for more details), the ML model they trained was mainly based on geometric structural descriptors, with the addition of a single energy-based descriptor: the Voronoi energy\ (i.e.,\ the average energy\ of a xenon atom at the accessible nodes in the Voronoi partition of space). In addition to identifying and describing some top performing materials, the authors also analyzed the correlations between high Xe/Kr selectivity and the geometric properties of the frameworks, in order to ``rationalize the strong link between pore size and selectivity''. In particular, by developing theoretical pore models of spherical and cylindrical geometries, they could highlight the general geometrical trends observed, but also the fact that there is a wide diversity of performance beyond the geometrical features of the frameworks, which suggests the key role of the chemical nature of the cavities.
 
-By looking at the distribution of the most selective materials ($s\geq 14$) compared to the less selective ones ($s<14$) in the Figure~\ref{fgr:Simon2015}, Simon et al.\ established a first profile of the selective materials. These materials have pore sizes of a specific diameter very close to the kinetic diameter of xenon around \SI{4.4}{\angstrom} depending on how it is defined. They have rather low surface areas and porosities (void fractions), unlike what we would normally expect since the adsorbable surface is a key reason for using nanoporous materials in adsorption applications. This behavior can be rationalized by the fact that small pores of the order of a few \si{\angstrom} immediately imply smaller pore volumes and surface areas since the framework atoms occupy much more space. The crystal density is therefore also a bit higher for these reasons. Moreover, the pore's shape is also a crucial factor since a shape closer to a sphere would interact with the xenon with more atoms, hence increasing its affinity and the selectivity. Finally, last but not least, the Voronoi energy described the physical nature of the binding between the xenon and the pore atoms, the more negative it is and the more selective the material will be. To wrap up, the ideal materials have a pseudo-spherical shape (a complete sphere would stop the diffusion of the adsorbates) with a size close to the diameter of a xenon which is rather dense and not very porous.
+By looking at the distribution of the most selective materials ($s\geq 14$) compared to the less selective ones ($s<14$) on Figure~\ref{fgr:Simon2015}, Simon et al.\ established a first profile of the selective materials. These materials have pore sizes of a specific diameter very close to the kinetic diameter of xenon around \SI{4.4}{\angstrom} depending on how it is defined. They have rather low surface areas and porosities (void fractions), unlike what we would normally expect since the adsorbable surface is a key reason for using nanoporous materials in adsorption applications. This behavior can be rationalized by the fact that small pores of the order of a few \si{\angstrom} immediately imply smaller pore volumes and surface areas since the framework atoms occupy much more space. The crystal density is therefore also a bit higher for these reasons. Moreover, the pore's shape is also a crucial factor since a shape closer to a sphere would interact with the xenon with more atoms, hence increasing its affinity and the selectivity. Finally, last but not least, the Voronoi energy described the physical nature of the binding between the xenon and the pore atoms, the more negative it is and the more selective the material will be. To wrap up, the ideal materials have a pseudo-spherical shape (a complete sphere would stop the diffusion of the adsorbates) with a size close to the diameter of a xenon which is rather dense and not very porous.
 
 \begin{figure}[ht]
 \centering
